--- a/main.css
+++ b/main.css
@@ -30,3 +30,7 @@
     background: none;
     border: 1px solid black;
 }
+
+body {
+    background: url(https://cdn.pixabay.com/photo/2016/04/08/00/26/seamless-1315277__340.jpg);
+}
