--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@
     padding: 10px;
     font-size: 16px;
     font-weight: bold;
-    background: none;
+    background: white;
     border: 1px solid black;
 }
 
