--- a/main.css
+++ b/main.css
@@ -1,17 +1,20 @@
 .container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
-    grid-auto-rows: 200px;
-    grid-template-areas:
-        ". a a ."
-        ". a a .";
+
+}
+
+.canvas-container {
+    margin-left: auto;
+
+    margin-right: auto;
+    width: 300px;
 }
 
 .maks-container {
-    grid-area: a;
-    align-self: center;
-    justify-self: center;
+    margin-left: auto;
+
+    margin-right: auto;
+
+    width: 40%;
 }
 
 .input {
